UIP-154 UI Library has wrong font stack
Change-Id: I10b28cc81c9f7068b15438b5a2b90dcb2bc7d30d

--- a/packages/ui-library/src/css/globals.scss
+++ b/packages/ui-library/src/css/globals.scss
@@ -96,7 +96,7 @@ $color-link-text: $color-active-blue;
 
 
 // FONTS
-$font-stack: 'Proxima Nova', Helvetica, Arial, sans-serif;
+$font-stack: 'ProximaNovaRegular', Helvetica, Arial, sans-serif;
 $font-pn-regular: 'ProximaNovaRegular', helvetica, arial, sans-serif;
 $font-pn-bold: 'ProximaNovaBold', helvetica, arial, sans-serif;
 $font-pn-light: 'ProximaNovaLight', helvetica, arial, sans-serif;
