limit line length of logo svg (for Access) add back missing show/hide form text field styling
Change-Id: If489e2e11202b1cd6d8c070d5167215d1a43e692

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -430,10 +430,22 @@ label {
 		}
 	}
 	a {
-    &.password-show-button {
-      display: inline-block;
-      margin-left: -32px;
-    }
+		&.password-show-button {
+            position: absolute;
+            right: 14px;
+
+            &:hover {
+                text-decoration: none;
+            }
+            &.icon-view {
+                top: 14px;
+                font-size: 13px;
+            }
+            &.icon-view-hidden {
+                top: 9px;
+                font-size: 24px;
+            }
+        }
 		&.input-toggle {
 			display: block;
 		}
