--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -482,6 +482,41 @@ $layout-zindex-order: (
 
 // REUSABLE PAGE STYLES ----------------------------------------------------------------------------
 
+.collapsible-link {
+	position: relative;
+	display: inline-block;
+	padding: 0 0 25px 0;
+	margin-right: 25px;
+	font-size: 14px;
+	color: $color-active-blue;
+	line-height: 1em;
+	cursor: pointer;
+	font-family: $font-pn-regular;
+	&:hover {
+		color: $color-active-blue-highlighted;
+		text-decoration: underline;
+		&:after {
+			color: $color-active-blue-highlighted;
+		}
+	}
+	&:after {
+		position: absolute;
+		top: 0;
+		right: -15px;
+		content: '\59';
+		font-family: $icon-font;
+		font-size: 6px;
+		color: $color-active-blue;
+		@include transition((all 0.3s cubic-bezier(1, 0, 1, 1)));
+	}
+	&.open {
+		&:after {
+			@include rotate(-180deg);
+			@include transition((all 0.3s cubic-bezier(0, 0, 0, 1)));
+		}
+	}
+}
+
 .page-title {
 	font-size: 24px;
 	font-family: $font-pn-regular;
