UIP-171 : add css for new select list input ALSO: change formLabel so that the label-text div is not rendered if not label is specified
Change-Id: I3deceaf0b8ef9a839fe4c11b5b65788be390cf3d

--- a/packages/ui-library/src/css/details-tooltip.scss
+++ b/packages/ui-library/src/css/details-tooltip.scss
@@ -297,4 +297,18 @@
 	    	margin-bottom: 20px;
 		}
 	}
+	&.input-selection-list-tooltip {
+		.details-content {
+			width: 200px;
+			padding: 0;
+			border-color: $color-timberwolf;
+
+			&:before {
+				border-color: transparent transparent $color-timberwolf transparent;
+			}
+			.input-selection-list {
+				border: none;
+			}
+		}
+	}
 }
