UIP-171 : tweak new select-list input css so that scrollbar does not overlap labels
Change-Id: Ie79497fca79a63c254d77098132d8de6e70888b7

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -1271,10 +1271,10 @@ input[type=file] {
 		overflow-y: auto;
 
 		.input-radio {
-			margin: 0 0 10px 0;
+			margin: 0 15px 10px 0;
 		}
 		.input-checkbox {
-			margin: 0 0 10px 0;
+			margin: 0 15px 10px 0;
 
 			.label-text {
 				text-transform: none;
