UIP-315 : first shot at a css tips tutorial tweak tutorial markup and css remove unneeded demo css files.
Change-Id: I7454737b26e662ba5f90516a3948f2b69b3e01e2

--- a/packages/ui-library/src/css/buttons.scss
+++ b/packages/ui-library/src/css/buttons.scss
@@ -32,6 +32,7 @@ input[type=button], input[type=submit], button, .button {
 	height: $height;
 	line-height: $height;
 	border: 1px solid $color-rhino;
+	box-sizing: border-box;
 
 	@include border-radius(2px);
 	@include base-button-styles;
