--- a/packages/ui-library/src/css/tutorial.scss
+++ b/packages/ui-library/src/css/tutorial.scss
@@ -1,9 +1,5 @@
 .introOverlay {
-	$intro-colors: (
-				'blue': #40C5E3
-		);
-
-	background: rgba(map-get($colors, 'black'), 0.6);
+	background: rgba($color-black, 0.6);
 	width: 100%;
 	height: 100%;
 	margin: 0;
@@ -28,17 +24,16 @@
 		margin-left: -200px;
 		top: 50%;
 		left: 50%;
-		background-color: map-get($colors, 'black');
+		background-color: $color-black;
 		width: 400px;
 		opacity: 1;
-		color: map-get($colors, 'white');
+		color: $color-white;
 		@include border-radius(5px);
 
 		.title {
 			font-size: 36px;
 			line-height: 1em;
 			margin: 0 0 25px 0;
-			color: map-get($intro-colors, 'blue');
 			font-family: $font-pn-regular;
 		}
 		.description {
@@ -51,14 +46,14 @@
 			font-weight: 100;
 			font-size: 20px;
 			padding: 30px 0;
-			color: transparentize(map-get($colors, 'white'), 0.5);
+			color: transparentize($color-white, 0.5);
 		}
 		.controls {
 			position: absolute;
 			bottom: 0;
 			left: 5px;
 			right: 5px;
-			border-top: 1px solid transparentize(map-get($colors, 'white'), 0.75);
+			border-top: 1px solid transparentize($color-white, 0.75);
 			padding: 20px 0;
 			text-align: right;
 
@@ -66,15 +61,13 @@
 		input[type=button] {
 			border: none;
 			font-size: 16px;
-					line-height: 1em;
+			line-height: 1em;
 			padding: 10px 20px;
-			color: map-get($colors, 'white');
-			background-color: map-get($intro-colors, 'blue');
+			color: $color-white;
 			font-weight: 100;
 			@include border-radius(2px);
 
 			&.prev, &.dismiss {
-				color: map-get($intro-colors, 'blue');
 				background-color: transparent;
 				font-weight: 500;
 			}
@@ -86,13 +79,12 @@
 			}
 			&[disabled] {
 				&:hover {
-					color: map-get($colors, 'white');
+					color: $color-white;
 				}
 			}
 		}
 	}
 	path {
-		stroke: map-get($intro-colors, 'blue');
 		fill:none;
 
 		&.line {
@@ -103,7 +95,7 @@
 		}
 	}
 	> .spotlight {
-		background: map-get($colors, 'white');
+		background: $color-white;
 		border-radius: 15px;
 		position: absolute;
 		text-align: left;
@@ -116,4 +108,13 @@ html body .introOverlay > .spotlight > * {
 	top:0;
 	margin-bottom:0;
 	margin-top:0;
+}
+
+.icons {
+	.inline-icon {
+		display: inline-block;
+		width: 35px;
+		text-align: center;
+		color:  $color-walrus;
+	}
 }
