--- a/packages/ui-library/src/demo/css/tutorial.scss
+++ b/packages/ui-library/src/demo/css/tutorial.scss
@@ -1,5 +1,4 @@
 .tutorial {
-    margin-top: 12px;
 
     h3 {
         font-family: $font-pn-semibold;
@@ -7,17 +6,21 @@
     }
     .attention {
         position: relative;
-        margin-left: 50px;
-        margin-top: 32px;
-        padding: 7px;
-        font-style: italic;
-        border: 1px dotted;
+        margin: 50px 0 30px 0;
+        padding: 10px;
+        color: $color-walrus;
+        border-left: 10px solid $color-warning-yellow;
+        background: $color-elderly;
+        font-family: $font-pn-regular;
 
         &:before {
+			font-size: 14px;
+            font-family: $font-pn-semibold;
+			color: $color-elephant;
             position: absolute;
             content: 'ATTENTION!';
-            top: -25px;
-            left: -50px;
+            top: -20px;
+            left: -5px;
         }
     }
 
@@ -26,24 +29,26 @@
     }
 
     .table-of-contents {
-        margin-bottom: 20px;
-        font-family: Arial;
-        font-size: 13px;
+        margin: 25px 0 30px 5px;
+        font-family: $font-pn-regular;
+
+        &:before {
+            content: 'Table of Contents';
+            font-size: 16px;
+            color: $color-manatee;
+        }
 
         ul {
-            list-style: none;
-            padding: 10px 0;
-
             li {
-                background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAQAAAC1+jfqAAAALElEQVQoz2NgGGSg4EzBTPwKOgr+F6ThVzKTsJK7Bf/JN4GgG4C+6GAYigAASNYUTGaVYwsAAAAASUVORK5CYII=) no-repeat;
-                padding-left: 15px;
-                background-position-y: 2px;
+                a {
+                    font-size: 14px;
+                }
             }
         }
     }
 
     img {
-        border: 1px dashed silver;
+        border: 1px solid $color-timberwolf;
         margin-bottom: 20px;
     }
 
