UIP-326 Highlight searched item, up/down arrows to move through country list
Change-Id: I800eb70c4900ece4bec6b5c59f78a558fc8c72cb

--- a/packages/ui-library/src/css/i18n.scss
+++ b/packages/ui-library/src/css/i18n.scss
@@ -268,7 +268,7 @@ $flagsImageExtension: "png" !default;
 				color: $greyText;
 			}
 
-			&:hover {
+			&:hover, &.highlighted {
 				background: $hoverColor;
 			}
 		}
