UIP-628 UIP-712: remove v1 JSDocs and fix v2 component source code links
Change-Id: Ie94e8afb16159b2f8508f91eca02326dff130c7d

--- a/packages/ui-library/src/demo/css/layout.scss
+++ b/packages/ui-library/src/demo/css/layout.scss
@@ -93,11 +93,15 @@ $sidenav-lineheight: 22px;
 				}
 			}
 		}
-		iframe {
+		iframe, .js-source {
 			height: 100%;
 			&.hidden {
 				display: none;
 			}
+		}
+		.js-source a {
+			display: inline;
+			margin-right: 5px;
 		}
 	}
 
@@ -134,6 +138,9 @@ $sidenav-lineheight: 22px;
 	iframe {
 		width: 100%;
 		height: 0;
+	}
+	.js-source a {
+		display: none;
 	}
 }
 
