UIP-457 --> provide optional buttons and keybindings for detailstooltip
Change-Id: I343eac89f1be41d93d51f1d5cfa7ff7729632374

--- a/packages/ui-library/src/css/details-tooltip.scss
+++ b/packages/ui-library/src/css/details-tooltip.scss
@@ -186,6 +186,7 @@
 				button, .button, input[type=button] {
 					margin: 0;
 					&.cancel {
+						margin-top: 0;
 						margin-right: 10px;
 					}
 				}
