UIP-613 UIP-668 UIP-821: standardize UI Library buttons
Change-Id: I61faea42b43a242af4077d364f95acf19f7be4ba

--- a/packages/ui-library/src/css/tutorial.scss
+++ b/packages/ui-library/src/css/tutorial.scss
@@ -58,7 +58,7 @@
 			text-align: right;
 
 		}
-		input[type=button] {
+		button[type=button] {
 			border: none;
 			font-size: 16px;
 			line-height: 1em;
