--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -740,8 +740,9 @@ input[type=file] {
 		margin: 0;
 		padding: 0;
 		font-size: 1px;
-		width: 1px;
-		height: 1px;
+		z-index: 1;
+		width: 100%;
+		height: 100%;
 		cursor: pointer;
 		@include opacity(0);
 	}
