UIP-642 Spinning loader for ie9
Change-Id: I53d1577b568938c48f004d6647f7d37520ba6f0e

--- a/packages/ui-library/src/css/loader.scss
+++ b/packages/ui-library/src/css/loader.scss
@@ -48,6 +48,20 @@
 
 		@include border-radius($loader-size);
 	}
+	&.ie9 {
+		border: none;
+		background-image: url("#{$img-path}spinner.gif");
+		background-repeat: no-repeat;
+		background-position: 50%;
+		background-size: 21px;
+		height: 21px;
+		width: 21px;
+		&.large {
+			background-size: 38px;
+			height: 38px;
+			width: 38px;
+		}
+	}
 }
 button.spinner {
 	$loader-size: 9px;
