UIP-822 : change method of hiding modal button bar to opacity since they scroll with the page
Change-Id: I4f3173cafb3a97195c11bb30dcf43d9c7d640aa8

--- a/packages/ui-library/src/css/modals.scss
+++ b/packages/ui-library/src/css/modals.scss
@@ -39,7 +39,7 @@
 		top: 0;
 		left: 50%;
 		transform: translateX(-50%);
-		max-height: 100%;
+		height: 100%;
 		max-width: $max-modal-width;
 		min-width: 360px;
 		font-family: $font-pn-regular;
@@ -240,6 +240,14 @@
 		}
 		.message {
 			padding-left: 30px;
+		}
+	}
+	.page-controls-primary {
+		@include transition(all 0.1s);
+
+		&.hidden {
+			@include transform(translateY(0));
+			@include opacity(0);
 		}
 	}
 }
